Closes #99. finish my part in #111